@@ -1,3 +1,5 @@
+set hive.optimize.ppd=true;
+
 EXPLAIN
 SELECT subq.key, subq.value FROM 
 (SELECT x.* FROM SRC x ORDER BY key limit 10) subq
